Разобрался со стилями, но еще не переделал все стили проекта

--- a/public/konspekt.html
+++ b/public/konspekt.html
@@ -82,3 +82,30 @@ return (
 );
 }
 export default Technologies;
+
+
+Обьект - структура данных:
+let blabla = {
+        '':'';
+    'ключ':'значение';
+}
+
+Чтобы в имени переменной в JS использовать дефис надо к нему обратиться при помощи других нотациый:
+"[name-v]" скобки и кавычки
+Лучше использовать Кемел кейс: headerCont или нижнее подчеркивание header_Cont
+
+Верстка по старинке если надо добавить 2 класса
+<div class="item active"
+.item {}
+.item.active{}
+
+Обьеденить классы в js
+     let c1 = "item";
+     let c2 = "active"
+     let classes = c1 + "" + c2;
+или
+    let classesNew = `${c1} ${c2}`;
+реакт
+    let classesNew = `${s.item} ${s.active}`;
+
+
