урок 16 пропсы -презентация. в файлах Post, Myposts

--- a/public/konspekt.html
+++ b/public/konspekt.html
@@ -109,3 +109,9 @@ let blabla = {
     let classesNew = `${s.item} ${s.active}`;
 
 
+Чтобы в браузере посмотреть содержимое мишем
+const Post = (props) => {
+console.log(props.messege)
+или
+тег debugger; в месте вопросов и f12 в браузере
+
