Массив данных вынесли в index.js

--- a/public/konspekt.html
+++ b/public/konspekt.html
@@ -140,3 +140,19 @@ return <nav>
 </nav>;
 }
 }
+
+
+shift+f6 - переименовать все одинаковые переменные на листе
+
+
+Вызываем функцию чтобы передать тег
+<Route path='/profile' render={ () => <Profile/>}/>
+или
+
+Let SomeComponent = () => <Dialogs/>
+    return(
+    <Route path='/profile' render={ () => <Profile/>}/>)
+
+props - обьект который приходит в компоненту
+
+debugger; - ставим в функцию с ошибками
