--- a/public/konspekt.html
+++ b/public/konspekt.html
@@ -156,3 +156,33 @@ Let SomeComponent = () => <Dialogs/>
 props - обьект который приходит в компоненту
 
 debugger; - ставим в функцию с ошибками
+
+
+Объект со всеми данными - state.js
+
+чтобы посмотреть что в консоли       console.log(classes);
+
+
+Функция map()
+        let newArray = oldArray.map( (el) => ({
+        eng:el,
+        ru: translateIntoRu(el)
+        }))
+или
+        let newArray = oldArray.map( (el) => (Message eng={el.eng} ru={el.ru} />) )
+
+
+
+
+alt+enter - импортировать
+
+
+Когда функция отдается комуто - это  функция обраного вызова - callBack/
+        Мы отдаем ее кнопке, она вызовет нам ее обратно, когда будет клик
+
+Функция это обьект, ее можно прокинуть через пропсы
+Стейт это тоже обьект
+Мы функцию не вызываем, а прокидываем дальше внутрь кнопки
+
+
+
